--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <div class="top_wrapper">
                 <h3 class="heading">Metric/Imperial unit conversion</h3>
                 <div class="value_el">
-                    0
+                    <input type="text" id="valueInput" placeholder="1">
+                    <button id="convertBtn">Convert</button>
                 </div>
             </div>
         </div>
